Added support for subspecies

--- a/WorldBirdNamesParser/WorldBirdNamesParser/WorldBirdNamesParser.csproj
+++ b/WorldBirdNamesParser/WorldBirdNamesParser/WorldBirdNamesParser.csproj
@@ -46,6 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="models\Family.cs" />
+    <Compile Include="models\Order.cs" />
+    <Compile Include="models\Specie.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
